# euroeval-for-pretraining

./: euroeval_benchmark_results.jsonl  makefile  pyproject.toml  runner.sh
src/: plot_over_tokens.py
