[project]
name = "euroeval-for-pretraining"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.12"
dependencies = [
    # used for plotting
    "pandas>=2.3.3",
    "scipy>=1.16.3",
    "seaborn>=0.13.2",
    # used for evals
    "euroeval[all]>=16.5.0",
]

[dependency-groups]
dev = ["ipykernel>=7.1.0"]
